syntax = "proto3";

// packatge = service;
option go_package = "grpc-base/protos";

// 请求参数
message EchoRequest{
    string Req =1;
}

// 返回参数
message EchoResponse{
    string Res=1;
}

// 服务
service EchoService{
    // 一元请求应答
    rpc GetUnaryEcho(EchoRequest) returns (EchoResponse);
    // 客户端流
    rpc GetCStreamEcho(stream EchoRequest) returns (EchoResponse);
    // 服务端流
    rpc GetSStreamEcho(EchoRequest) returns (stream EchoResponse);
    // 双端流
    rpc GetBIStreamEcho(stream EchoRequest) returns (stream EchoResponse);
}
// protoc --proto_path=. --go_out=../protos --go-grpc_out=../protos .\echo.proto